# zk-crowdfund

./: .env.sample  .gitignore  Cargo.toml  README.md  TASK.md  acc.pk  vercel.json
average-salary-frontend/: package-lock.json
average-salary-frontend/src/main/: Main.ts  index.html
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: lib.rs
contracts/mpc-20-token/: Cargo.toml  README.md
contracts/mpc-20-token/src/: lib.rs
contracts/zk-crowdfund/: README.md
contracts/zk-crowdfund/src/: contract.rs  token_interface.rs  zk_compute.rs
givtisia/: README.md  bun.lockb  fly.toml  index.html  package.json  tsconfig.app.json
givtisia/src/: Home.tsx  main.tsx
givtisia/src/auth/: AuthContext.ts  AuthProvider.tsx  permissions.ts  useAuth.ts  usePartisiaWallet.ts
givtisia/src/campaigns/: CampaignDetails.tsx
givtisia/src/components/: CampaignCard.tsx
givtisia/src/contracts/: CrowdfundGenerated.ts
scripts/: deploy-crowdfunding.sh
tutorial/: average-salary-example.md  zk-crowdfunding-tutorial.md
zk-crowdfunding/: Cargo.toml  README.md
zk-crowdfunding-factory/: Cargo.toml  README.md
zk-crowdfunding-factory/src/: lib.rs
zk-crowdfunding-frontend/: WEB-APP-TUTORIAL.md  package-lock.json  package.json  tsconfig.json  webpack.config.js  zk-crowdfunding-guide.md
zk-crowdfunding-frontend/public/: config.js  index.html
zk-crowdfunding-frontend/src/: App.css  App.tsx  AppState.ts  Main.ts  WalletIntegration.ts  config.json  config.ts  index.html  index.js  index.tsx
zk-crowdfunding/src/: contract.rs  token_interface.rs  zk_compute.rs
(+48 files in other folders)
